@@ -21,6 +21,15 @@ setMethod(applyPileups, c("PileupFiles", "ApplyPileupsParam"),
             open(files)
             on.exit(close(files))
         }
+    lvls <- lapply(files, seqlevels)
+    for (i in seq_along(files)[-1])
+        if (!identical(lvls[[i]], lvls[[1]])) {
+            msg <- sprintf("applyPileups 'seqlevels' must be identical();
+                failed when comparing %s with %s",
+                sQuote(basename(path(files)[1])),
+                sQuote(basename(path(files)[i])))
+            stop(paste(strwrap(msg, exdent=4), collapse="\n"))
+        }
     tryCatch({
         param <- as(param, "list")
         extptr <- lapply(files, .extptr)
